# pysurrogate

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  conftest.py  landscape.md  optimizer-design.md  proposal.md  pyproject.toml  status.md
.claude/docs/: MIGRATION.md  documentation.md
.pyclawd/: config.py
docs/: README.md  cli.py
docs/source/: api.rst  conf.py  getting_started.md  index.md  kriging.md  landscape.md  llms.txt  models.md  optimizers.md  sampling.md  selection.md
docs/source/_templates/: layout.html
scripts/: landscape_demo.py
src/pysurrogate/: __init__.py
src/pysurrogate/core/: __init__.py  kernel.py  metrics.py  model.py  optimizer.py  parameter.py  partitioning.py  prediction.py  regression.py  sampling.py  transformation.py
src/pysurrogate/dace/: __init__.py  corr.py  dace.py  fit.py  hmc.py  prior.py  problem.py  regr.py  selection.py
src/pysurrogate/dace/optimizers/: __init__.py  adam.py  base.py  boxmin.py  fixed.py  lbfgs.py  screened.py
src/pysurrogate/landscape/: __init__.py  _context.py  _util.py  active_subspace.py  convexity.py  core.py  curvature.py  dispersion.py  distribution.py  gradient_field.py  information_content.py  meta_model.py  multimodality.py  nearest_better.py  network.py  rotation.py  separability.py  spectral.py  topology.py  variogram.py
src/pysurrogate/models/: __init__.py  _dace_backed.py  bayesian.py  forest.py  idw.py  knn.py  kpls.py  kriging.py  mean.py  neural.py  rbf.py  regression.py  subspace.py  svr.py
src/pysurrogate/optimizer/: __init__.py  adam.py  boxmin.py  lbfgs.py  pattern.py  restart.py
src/pysurrogate/selection/: __init__.py  benchmark.py  factory.py  metrics.py  selection.py  study.py
src/pysurrogate/util/: __init__.py  dist.py  logging.py  misc.py  test_functions.py
tests/: __init__.py  test_public_api.py
tests/core/: __init__.py  _gen_kernel_snapshots.py  test_composable_profiles.py  test_kernel.py  test_kernel_equivalence.py  test_kernel_gradients.py  test_metrics.py  test_model_lifecycle.py  test_optimizer.py  test_parameter.py  test_partitioning.py  test_predict_failure.py  test_prediction.py  test_sampling.py  test_transformation.py
tests/core/fixtures/: kernel_snapshots.npz
tests/dace/: __init__.py  _gen_problem_snapshots.py  test_batch.py  test_calibrate.py  test_correctness.py  test_cubic_kernel.py  test_degenerate.py  test_fit_guards.py  test_golden.py  test_interface.py  test_matern.py  test_model_contract.py  test_mse_grad.py  test_multioutput.py  test_noise.py  test_optimizers.py  test_prior.py  test_problem.py  test_problem_equivalence.py  test_product_kernel.py  test_refit.py  test_rq.py  test_screened.py  test_selection_strategy.py  test_theta_prior.py  test_validation_selection.py
tests/dace/fixtures/: problem_snapshots.npz
tests/dace/golden/: test_golden.json
tests/landscape/: __init__.py  test_landscape.py
tests/models/: __init__.py  test_backends.py  test_bayesian.py  test_forest.py  test_knn.py  test_kpls.py  test_kriging.py  test_mean.py  test_neural.py  test_optimize_flag.py  test_rbf.py  test_rbf_tail.py  test_subspace.py
tests/selection/: __init__.py  test_automodel_lifecycle.py  test_function_benchmark.py  test_metric_sort_key.py  test_metrics.py  test_optimize_forwarding.py  test_selection.py  test_study.py
tests/util/: __init__.py  test_logging.py  test_misc.py
