[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysurrogate"
version = "0.1.0"
description = "A unified surrogate-modeling toolkit: sampling, fitting, and model selection"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Julian Blank", email = "blankjul@outlook.com" }]
keywords = ["surrogate", "metamodel", "kriging", "response surface", "machine learning"]
dependencies = ["numpy", "scipy", "scikit-learn", "pandas"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
# Plotting for the runnable examples only.
examples = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/anyoptimization/pysurrogate"

[tool.hatch.build.targets.wheel]
packages = ["src/pysurrogate"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# One-line-per-file docstring doctrine: enable pydocstyle (D) but drop the
# per-symbol mandates so only the module docstring is required, not every
# class/method/function.
select = ["E", "F", "I", "D"]
ignore = ["D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = ["src/pysurrogate"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (excluded from the default tier)",
    "integration: tests needing live services",
    "golden: behavior-oracle snapshots (run via `pyclawd golden`)",
]
